fix wrong font's file name

--- a/lm-labs-theme-cosmo/lm-labs-theme-cosmo/src/main/resources/skin/resources/less/theme/Cosmo/bootswatch.less
+++ b/lm-labs-theme-cosmo/lm-labs-theme-cosmo/src/main/resources/skin/resources/less/theme/Cosmo/bootswatch.less
@@ -21,7 +21,7 @@
   font-weight: 700;
   src: ~"url('@{labsThemeFontPath}/OpenSans-Bold.eot')";
   src: local('Open Sans Bold'), local('OpenSans-Bold'), ~"url('@{labsThemeFontPath}/OpenSans-Bold.ttf')" format('truetype'),
-   ~"url('@{labsThemeFontPath}/OpenSans-700.woff')" format('woff');
+   ~"url('@{labsThemeFontPath}/OpenSans-Bold.woff')" format('woff');
 }
 @font-face {
   font-family: 'Open Sans';
